# KanbanSystem-lite

./: README.md  READMEETAPA2.md  READMEETAPA3.md  relatorio.md  relatorio3.md  txt
design/: CMakeLists.txt  compilacao.txt
design/include/application/: CLIController.h  CLIView.h  KanbanService.h
design/include/domain/: ActivityLog.h  Board.h  Card.h  Column.h  User.h
design/include/gui/: CardDialog.h  CardWidget.h  ColumnWidget.h  MainWindow.h
design/include/interfaces/: IFilter.h  IRepository.h  IService.h  IView.h
design/include/persistence/: FileRepository.h  MemoryRepository.h  MemoryRepositoryImpl.h
design/src/application/: CLIController.cpp  CLIView.cpp  KanbanService.cpp  main.cpp
design/src/domain/: ActivityLog.cpp  Board.cpp  Card.cpp  Column.cpp  User.cpp
design/src/gui/: CardDialog.cpp  CardWidget.cpp  ColumnWidget.cpp  MainWindow.cpp  main_gui.cpp
design/src/persistence/: MemoryRepository.cpp
design/tests/: compile_test.cpp
design/uml/: uml.mermaid  uml2.mermaid  uml3.mermaid
teste/: relatorio.md
